examples/test/testpolicy10130.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10130
  namespace: namespace292
spec:
  podSelector:
    matchLabels:
      key24: value18
      key30: value36
      key31: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value10
          key47: value32
          key18: value43
